@@ -70,6 +70,7 @@ struct cmd_context {
 	unsigned is_long_lived:1;	/* Optimises persistent_filter handling */
 	unsigned handles_missing_pvs:1;
 	unsigned partial_activation:1;
+	unsigned si_unit_consistency:1;
 
 	struct dev_filter *filter;
 	int dump_filter;	/* Dump filter when exiting? */
