@@ -1,5 +1,8 @@
 Version 2.02.54 -
 =====================================
+  Use standard output units for 'PE Size' and 'Stripe size' in pv/lvdisplay.
+  Add configure --enable-units-compat to set si_unit_consistency off by default.
+  Add global/si_unit_consistency to enable cleaned-up use of units in output.
 
 Version 2.02.53 - 25th September 2009
 =====================================
